update bootstrap theme : fix tablist overflow issue

--- a/themes/react-dyn-tabs-bootstrap.css
+++ b/themes/react-dyn-tabs-bootstrap.css
@@ -5,8 +5,7 @@
   border-color: #dee2e6;
   background-color: #fff;
   display: flex;
-  flex-wrap: wrap;
-  overflow: unset;
+  overflow: hidden;
 }
 .rc-dyn-tabs-tablist .rc-dyn-tabs-tab {
   background-color: transparent;
