--- a/themes/scss/modules/_react-dyn-tabs-bootstrap.scss
+++ b/themes/scss/modules/_react-dyn-tabs-bootstrap.scss
@@ -64,8 +64,7 @@ $background-color: #fff;
     @include tablistBorder;
     background-color: $background-color;
     display: flex;
-    flex-wrap: wrap;
-    overflow: unset;
+    overflow: hidden;
 
     .rc-dyn-tabs-tab {
       background-color: transparent;
